--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,11 +2,11 @@ name: test
 
 on:
   push:
-    branches: [ "master" ]
+    branches: [ "master1" ]
     paths-ignore:
       - '**/README.md'
   pull_request:
-    branches: [ "master" ]
+    branches: [ "master1" ]
     paths-ignore:
       - '**/README.md'
 
