--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,8 @@
 name: build
 
-# ------------- NOTE
-# please setup some secrets before running this workflow:
-# DOCKER_IMAGE should be the target image name on docker hub (e.g. "rustdesk/rustdesk-server-s6" )
-# DOCKER_IMAGE_CLASSIC should be the target image name on docker hub for the old build (e.g. "rustdesk/rustdesk-server" )
-# DOCKER_USERNAME is the username you normally use to login at https://hub.docker.com/
-# DOCKER_PASSWORD is a token you should create under "account settings / security" with read/write access
-
 on:
   workflow_dispatch:
-#  push:
+  push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+'
       - '[0-9]+.[0-9]+.[0-9]+'
@@ -19,13 +12,11 @@ on:
 env:
   CARGO_TERM_COLOR: always
   LATEST_TAG: latest
-  
+
 jobs:
 
-  # binary build
   build:
-
-    name: Build - ${{ matrix.job.name }}
+    name: Build Linux - ${{ matrix.job.name }}
     runs-on: ubuntu-24.04
     strategy:
       fail-fast: false
@@ -35,20 +26,17 @@ jobs:
           - { name: "arm64v8", target: "aarch64-unknown-linux-musl" }
           - { name: "armv7",   target: "armv7-unknown-linux-musleabihf" }
           - { name: "i386",    target: "i686-unknown-linux-musl" }
-          #- { name: "amd64fb",    target: "x86_64-unknown-freebsd" }
 
     steps:
-      
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
 
-      # FIX 1: Changed toolchain from "1.81" to "stable" or "1.85.0"
       - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: "stable" # Updated to use the latest stable version
+          toolchain: stable
           override: true
           default: true
           components: rustfmt
@@ -62,10 +50,10 @@ jobs:
           args: --release --all-features --target=${{ matrix.job.target }}
           use-cross: true  
 
-      - name: Exec chmod
-        run: chmod -v a+x target/${{ matrix.job.target }}/release/*
+      - name: Make binaries executable
+        run: chmod a+x target/${{ matrix.job.target }}/release/*
 
-      - name: Publish Artifacts
+      - name: Publish Linux Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: binaries-linux-${{ matrix.job.name }}
@@ -76,21 +64,19 @@ jobs:
           if-no-files-found: error
 
   build-win:
-    name: Build - windows
+    name: Build Windows
     runs-on: windows-2022
 
     steps:
-      
       - name: Checkout
         uses: actions/checkout@v3
         with:
           submodules: recursive
 
-      # FIX 2: Changed toolchain from "1.81" to "stable" or "1.85.0"
       - name: Install toolchain
         uses: actions-rs/toolchain@v1
         with:
-          toolchain: "stable" # Updated to use the latest stable version
+          toolchain: stable
           override: true
           default: true
           components: rustfmt
@@ -104,36 +90,13 @@ jobs:
           args: --release --all-features --target=x86_64-pc-windows-msvc
           use-cross: true
 
-      - name: Install NSIS
+      - name: Build UI
         run: |
-          iwr -useb get.scoop.sh -outfile 'install.ps1'
-          .\install.ps1 -RunAsAdmin
-          scoop update
-          scoop bucket add extras
-          scoop install nsis
-
-      - name: Install Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 16
-
-      - name: Sign exe files
-        uses: GermanBluefox/code-sign-action@v7
-        if: false
-        with:
-          certificate: '${{ secrets.WINDOWS_PFX_BASE64 }}'
-          password: '${{ secrets.WINDOWS_PFX_PASSWORD }}'
-          certificatesha1: '${{ secrets.WINDOWS_PFX_SHA1_THUMBPRINT }}'
-          folder: 'target\x86_64-pc-windows-msvc\release'
-          recursive: false
-
-      - name: Build UI browser file
-        run: |
-          npm i
+          npm ci
           npm run build
         working-directory: ./ui/html
 
-      - name: Build UI setup file
+      - name: Build Windows Setup
         run: |
           rustup default nightly
           cargo build --release
@@ -142,21 +105,11 @@ jobs:
           mkdir setup\logs
           makensis /V1 setup.nsi
           mkdir SignOutput
-          mv RustDeskServer.Setup.exe SignOutput\
-          mv ..\target\x86_64-pc-windows-msvc\release\*.exe SignOutput\
+          move RustDeskServer.Setup.exe SignOutput\
+          move ..\target\x86_64-pc-windows-msvc\release\*.exe SignOutput\
         working-directory: ./ui
 
-      - name: Sign UI setup file 
-        uses: GermanBluefox/code-sign-action@v7
-        if: false
-        with:
-          certificate: '${{ secrets.WINDOWS_PFX_BASE64 }}'
-          password: '${{ secrets.WINDOWS_PFX_PASSWORD }}'
-          certificatesha1: '${{ secrets.WINDOWS_PFX_SHA1_THUMBPRINT }}'
-          folder: './ui/SignOutput'
-          recursive: false
-
-      - name: Publish Artifacts
+      - name: Publish Windows Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: binaries-windows-x86_64
@@ -167,11 +120,9 @@ jobs:
             ui\SignOutput\RustDeskServer.Setup.exe
           if-no-files-found: error
 
-  # github (draft) release with all binaries
   release:
-
-    name: Github release
-    needs: 
+    name: Create GitHub Release
+    needs:
       - build
       - build-win
     runs-on: ubuntu-24.04
@@ -183,30 +134,30 @@ jobs:
           - { os: "linux", name: "arm64v8", suffix: "" }
           - { os: "linux", name: "armv7", suffix: "" }
           - { os: "linux", name: "i386", suffix: "" }
-          #- { os: "linux", name: "amd64fb", suffix: "" }
           - { os: "windows", name: "x86_64", suffix: "-unsigned" }
-          
-    steps:
 
-      - name: Download binaries (${{ matrix.job.os }} - ${{ matrix.job.name }})
+    steps:
+      - name: Download artifacts
         uses: actions/download-artifact@v4
         with:
           name: binaries-${{ matrix.job.os }}-${{ matrix.job.name }}
-          path: ${{ matrix.job.name }}
+          path: release/${{ matrix.job.os }}-${{ matrix.job.name }}
 
-      - name: Exec chmod
-        run: chmod -v a+x ${{ matrix.job.name }}/*
+      - name: Make files executable
+        if: matrix.job.os == 'linux'
+        run: chmod a+x release/${{ matrix.job.os }}-${{ matrix.job.name }}/*
 
-      - name: Pack files (${{ matrix.job.os }} - ${{ matrix.job.name }})
+      - name: Pack files
         run: |
-          sudo apt update
-          DEBIAN_FRONTEND=noninteractive sudo apt install -y zip
-          zip ${{ matrix.job.name }}/rustdesk-server-${{ matrix.job.os }}-${{ matrix.job.name }}${{ matrix.job.suffix }}.zip ${{ matrix.job.name }}/*
+          sudo apt-get update -qq
+          sudo apt-get install -y zip
+          cd release/${{ matrix.job.os }}-${{ matrix.job.name }}
+          zip -r ../../rustdesk-server-${{ github.ref_name }}-${{ matrix.job.os }}-${{ matrix.job.name }}${{ matrix.job.suffix }}.zip *
+        shell: bash
 
-      - name: Create Release (${{ matrix.job.os }} - (${{ matrix.job.name }})
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ github.ref_name }}
           draft: true
-          files: ${{ matrix.job.name }}/rustdesk-server-${{ matrix.job.os }}-${{ matrix.job.name }}${{ matrix.job.suffix }}.zip
-            
- 
+          files: rustdesk-server-${{ github.ref_name }}-${{ matrix.job.os }}-${{ matrix.job.name }}${{ matrix.job.suffix }}.zip
